setup debug and added squares component. should be all routes

--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,8 @@
 		<script src="modules/register/register.controller.js"></script>
 		<script src="models/user/user.module.js"></script>
 		<script src="models/user/user.service.js"></script>
+		<script src="common/squares/squares.module.js"></script>
+		<script src="common/squares/squares.component.js"></script>
 		<!-- endbuild -->
 </body>
 </html>
