--- a/app/modules/admins/admins.template.html
+++ b/app/modules/admins/admins.template.html
@@ -1,1 +1,6 @@
-<p>admin</p>
+<div class="row">
+    <div class="columns small-12 medium-6 large-4">
+        <h2>Welcome {{admins.user.name}}</h2>
+        <squares user-role="admins.user.role"></squares>
+    </div>
+</div>
