--- a/app/modules/shared/shared.template.html
+++ b/app/modules/shared/shared.template.html
@@ -1,10 +1,6 @@
 <div class="row">
     <div class="columns small-12 medium-6 large-4">
         <h2>Welcome {{shared.user.name}}</h2>
-        <div class="square-container">
-            <div class="square" ng-repeat="item in shared.squares">
-                {{item.color}}
-            </div>
-        </div>
+        <squares user-role="shared.user.role"></squares>
     </div>
 </div>
