added back&forth nav for admins

--- a/app/modules/admins/admins.template.html
+++ b/app/modules/admins/admins.template.html
@@ -4,3 +4,8 @@
         <squares user-role="admins.user.role"></squares>
     </div>
 </div>
+<div class="row">
+    <div class="columns small-12">
+        <a ui-sref="application.shared">Switch to user view</a>
+    </div>
+</div>
