--- a/app/modules/login/login.template.html
+++ b/app/modules/login/login.template.html
@@ -10,11 +10,11 @@
                 Password
                 <input type="password" name="loginForm.password" ng-model="login.password" />
             </label>
-            <label>
+            <label class="label--checkbox">
                 Remember me
-                <input type="checkbox" />
+                <input type="checkbox" class="checkbox" />
             </label>
             <input class="button" type="submit" value="Login" />
         </form>
-        <button ng-click="login.loginWithFacebook()">Login with facebook</button>
+        <button class="button" ng-click="login.loginWithFacebook()">Login with facebook</button>
 </div>
