--- a/app/index.html
+++ b/app/index.html
@@ -17,9 +17,21 @@
 
         <!-- Application Entry: -->
         <div ui-view="root"></div>
+        <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
+        <!--<script>
+			// Initialize Firebase
+			var config = {
+				apiKey: "AIzaSyBV3CqdwudjH2xSfTI6Qr3WVbo4pWeoPsw",
+				authDomain: "fe-auth-challenge.firebaseapp.com",
+				databaseURL: "https://fe-auth-challenge.firebaseio.com",
+				storageBucket: "fe-auth-challenge.appspot.com",
+				messagingSenderId: "351822589592"
+			};
+			firebase.initializeApp(config);
+        </script>-->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-        <script>
+        <!--<script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -28,11 +40,10 @@
             ga('create', 'UA-XXXXX-X');
             // We use an angular module to track "page" views.
             //ga('send', 'pageview');
-        </script>
+        </script>-->
 
         <!-- build:js(.) scripts/vendor.js -->
         <!-- bower:js -->
-        <script src="bower_components/modernizr/modernizr.js"></script>
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/nMessages/dist/nMessages.js"></script>
@@ -53,6 +64,7 @@
         <script src="bower_components/angulartics-google-analytics/lib/angulartics-google-analytics.js"></script>
         <script src="bower_components/firebase/firebase.js"></script>
         <script src="bower_components/angularfire/dist/angularfire.js"></script>
+        <script src="bower_components/what-input/what-input.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
