--- a/app/modules/index/index.template.html
+++ b/app/modules/index/index.template.html
@@ -1,3 +1,3 @@
-<p>Landing page</p>
-<a class="button" ui-sref="application.login">Login</a>
-<a class="button" ui-sref="application.register">Register</a>
+<h2>Landing page</h2>
+<a class="button inverted" ui-sref="application.login">Login</a>
+<a class="button inverted" ui-sref="application.register">Register</a>
